--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
@@ -45,12 +45,12 @@
                         <div class="TexAlCenter tcm-graphType">
                         #{tcmpb.fixedModelName}
                         </div>
-                        <div class="Container100">
+                        <!--<div class="Container100">
                             <p:chart type="pie" model="#{tcmpb.charts.pieChart}" styleClass="PieGraphPosition"
                                      style="height:200px; width: 100%;"
                                      rendered="#{tcmpb.charts.pieChart != null}"
                                      responsive="true"/>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="Container50 Fleft Responsive50">
                         <p:dataTable styleClass="invAllocTable"
