--- a/Invessence/modules/web/src/main/webapp/pages/consumer/ltam/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/ltam/index.xhtml
@@ -72,7 +72,8 @@
                                                                     <h:outputText value="#{acct.investment}">
                                                                         <f:convertNumber currencySymbol="$" type="currency"/>
                                                                     </h:outputText>
-                                                                </strong></td>
+                                                                </strong>
+                                                            </td>
                                                         </tr>
                                                         <tr style="font-size: 13px;">
                                                             <td colspan="2" style="width: 100%; margin-left: 5px">
@@ -90,7 +91,8 @@
                                                                                     <f:setPropertyActionListener value="#{acct}"
                                                                                                                  target="#{cdash.selectedAccount}"/>
                                                                                 </p:commandButton>
-                                                                            </div><div class="Mobilelabel Container60"><h3>Overview</h3></div>
+                                                                            </div>
+                                                                        <div class="Mobilelabel Container60"><h3>Overview</h3></div>
                                                                             
                                                                             <div class="Container40 IconWidthP">
                                                                                 <p:commandButton id="fundBtn"
@@ -125,6 +127,7 @@
                                                                                                                  target="#{cdash.selectedAccount}"/>
                                                                                 </p:commandButton>
                                                                             </div><div class="Mobilelabel Container60"><h3>Edit Account</h3></div>
+
                                                                         
 
                                                                     </div>
