--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
@@ -28,7 +28,7 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="TexAlLeft" style="width: 75%">#{tcmpb.fixedModelName}</td>
+                    <td class="TexAlLeft" style="width: 75%">#{tcmpb.selectedThemeName}</td>
                     <td class="TexAlRight" style="width: 25%">
                         <h:outputText value="#{tcmpb.actualInvested}">
                             <f:convertNumber currencySymbol="$" type="currency"/>
