--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
@@ -26,7 +26,7 @@
                         <td colspan="2" class="TexAlCenter">
                             <div class="DispInlBlock TexAlLeft tp1">
                                 <div class="Fright">
-                                    <h2 class="black f1 textAlign">The primary objective of this strategy is </h2>
+                                    <h2 class="black f1 textAlign">The primary objective of this strategy is #{tcmpb.longDes} </h2>
                                 </div>
                             </div>
                         </td>
