--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -42,8 +42,9 @@
                             <p:panel style="width: 100%; background: #f5f5f5;">
                                 <table class="invNBgrid AccountDashboardAlignRes" style="width: 100%;">
                                     <tr style="font-size: 15px;">
-                                        <td style="width: 25%;">#{investment.goal}</td>
                                         <td style="width: 25%;">#{investment.portfolioName}</td>
+                                        <td style="width: 25%;">#{investment.goal}</td>
+
                                         <td style="width: 25%;">#{investment.displayActiveAcctNum}</td>
                                         <td style="width: 25%; text-align: right;">
                                             <strong>
@@ -66,11 +67,11 @@
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-search-plus Fs14 white"
                                                                          action="#{tcmdash.doSelectedAction}">
-                                                            <p:tooltip id="activeToolTipFade" for="activeButton" value="View"/>
+                                                            <p:tooltip id="activeToolTipFade" for="activeButton" value="Balance and Positions"/>
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>Overview</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>Balance and Positions</h3></div>
 </div>
 <div class="s_dashboard">
                                                     <div class="Container40 s_dashboardIcon">
@@ -79,11 +80,11 @@
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-pie-chart Fs14 white"
                                                                          action="#{tcmdash.doPortfolioSelectedAction}">
-                                                            <p:tooltip id="portfolioToolTipFade" for="editPortfolioButton" value="Edit Portfolio"/>
+                                                            <p:tooltip id="portfolioToolTipFade" for="editPortfolioButton" value="Change Portfolio Strategy/Goal"/>
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>Choose New Portfolio</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>Change Portfolio Strategy/Goal</h3></div>
 </div>
                                             <div class="s_dashboard">
                                                     <div class="Container40 s_dashboardIcon">
@@ -92,11 +93,11 @@
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-dollar Fs14 white"
                                                                          action="#{tcmdash.doSelectedAction}">
-                                                            <p:tooltip id="fundToolTipFade" for="fundButton" value="Edit Funding"/>
+                                                            <p:tooltip id="fundToolTipFade" for="fundButton" value="Edit/Update Funding"/>
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>Edit Funding</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>Edit/Update Funding</h3></div>
 
 </div>
                                             <div class="s_dashboard">
@@ -106,11 +107,11 @@
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-pencil-square-o Fs14 white"
                                                                          action="#{tcmdash.doSelectedAction}">
-                                                            <p:tooltip id="pendingToolTipFade" for="pendingButton" value="Edit"/>
+                                                            <p:tooltip id="pendingToolTipFade" for="pendingButton" value="View/Edit Account Details"/>
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>Edit Account</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>View/Edit Account Details</h3></div>
 </div>
                                                 </div>
                                             <div class="EmptyBox10"></div>
