--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
@@ -43,7 +43,7 @@
                 <div class="Container80 Responsive100">
                     <div class="Container50  Fleft Responsive50">
                         <div class="TexAlCenter tcm-graphType">
-                        #{tcmpb.fixedModelName}
+                        #{tcmpb.}
                         </div>
                         <div class="Container100">
                             <p:chart type="pie" model="#{tcmpb.charts.pieChart}" styleClass="PieGraphPosition"
