--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -67,11 +67,11 @@
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-search-plus Fs14 white"
                                                                          action="#{tcmdash.doSelectedAction}">
-                                                            <p:tooltip id="activeToolTipFade" for="activeButton" value="Balance and Positions"/>
+                                                            <p:tooltip id="activeToolTipFade" for="activeButton" value="Positions"/>
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>Balance and Positions</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>Positions</h3></div>
 </div>
 <div class="s_dashboard">
                                                     <div class="Container40 s_dashboardIcon">
@@ -80,11 +80,11 @@
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-pie-chart Fs14 white"
                                                                          action="#{tcmdash.doPortfolioSelectedAction}">
-                                                            <p:tooltip id="portfolioToolTipFade" for="editPortfolioButton" value="Change Portfolio Strategy/Goal"/>
+                                                            <p:tooltip id="portfolioToolTipFade" for="editPortfolioButton" value="Change Strategy"/>
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>Change Portfolio Strategy/Goal</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>Change Strategy/Goal</h3></div>
 </div>
                                             <div class="s_dashboard">
                                                     <div class="Container40 s_dashboardIcon">
@@ -93,11 +93,11 @@
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-dollar Fs14 white"
                                                                          action="#{tcmdash.doSelectedAction}">
-                                                            <p:tooltip id="fundToolTipFade" for="fundButton" value="Edit/Update Funding"/>
+                                                            <p:tooltip id="fundToolTipFade" for="fundButton" value="Edit Funding"/>
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>Edit/Update Funding</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>Edit Funding</h3></div>
 
 </div>
                                             <div class="s_dashboard">
@@ -107,11 +107,11 @@
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-pencil-square-o Fs14 white"
                                                                          action="#{tcmdash.doSelectedAction}">
-                                                            <p:tooltip id="pendingToolTipFade" for="pendingButton" value="View/Edit Account Details"/>
+                                                            <p:tooltip id="pendingToolTipFade" for="pendingButton" value="Edit Account Details"/>
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>View/Edit Account Details</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>Edit Account Details</h3></div>
 </div>
                                                 </div>
                                             <div class="EmptyBox10"></div>
