--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -42,11 +42,11 @@
                             <p:panel style="width: 100%; background: #f5f5f5;">
                                 <table class="invNBgrid AccountDashboardAlignRes" style="width: 100%;">
                                     <tr style="font-size: 15px;">
-                                        <td style="width: 25%;">#{investment.portfolioName}</td>
-                                        <td style="width: 25%;">#{investment.goal}</td>
+                                        <td style="width: 25%;" class="FS13Custom">#{investment.portfolioName}</td>
+                                        <td style="width: 25%;" class="FS13Custom DisplaynoneMobile">#{investment.goal}</td>
 
-                                        <td style="width: 25%;">#{investment.displayActiveAcctNum}</td>
-                                        <td style="width: 25%; text-align: right;">
+                                        <td style="width: 25%;" class="FS13Custom DisplaynoneMobile">#{investment.displayActiveAcctNum}</td>
+                                        <td style="width: 25%; text-align: right;" class="FS13Custom">
                                             <strong>
                                                 <h:outputText value="#{investment.actualInvested}"  rendered="#{investment.managed}">
                                                     <f:convertNumber currencySymbol="$" type="currency"/>
@@ -91,7 +91,7 @@
                                                         <p:commandButton id="fundButton"  disabled="#{!investment.hasPosition}"
                                                                          styleClass="Fs14 GreenButton"
                                                                          process="@this" immediate="true"
-                                                                         icon="fa fa-dollar Fs14 white"
+                                                                         icon="fa fa-university Fs14 white"
                                                                          action="#{tcmdash.doSelectedAction}">
                                                             <p:tooltip id="fundToolTipFade" for="fundButton" value="Edit Funding"/>
                                                             <f:setPropertyActionListener value="#{investment}"
